--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fungeonstudio.diagonline">
+    package="com.fungeonstudio.redline">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name="com.fungeonstudio.redline.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name="com.fungeonstudio.redline.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         </activity>
@@ -32,13 +32,13 @@
             android:value="@string/facebook_application_id" />
 
         <activity
-            android:name=".DetailActivity"
+            android:name="com.fungeonstudio.redline.DetailActivity"
             android:label="@string/title_activity_detail"
             android:theme="@style/Full"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.fungeonstudio.diagonline.MainActivity" />
+                android:value="com.fungeonstudio.redline.MainActivity" />
         </activity>
     </application>
 
